# Homework_27

./: README.md  db.sqlite3  manage.py  pyproject.toml
Homework_27/: asgi.py  settings.py  urls.py  wsgi.py
my_apps/: admin.py  apps.py  models.py  views.py
my_apps/migrations/: 0001_initial.py
